# saml-rs

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SECURITY.MD  SECURITY.md  TODO-KeyRotation.md  TODO.md  builddocs.sh  clippy.toml  crates.js  docker-compose.live-e2e.yml  docker_build.sh  index.html  justfile  mise.toml  pre-commit.sh  pyproject.toml  run_docker_example.sh  search-index.js  settings.html  source-files.js  test-c14n.py  test.py  test_c14n.py  test_examples.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: build_container.yml  clippy.yml  dependency_review.yml  docs_pages.yml  live_e2e.yml  mypy.yml  pylint.yml  pytest.yml  rust_test.yml  rustdoc.yml  rustdoc.yml.disabled  shellcheck.yml
docs/: book.toml
docs/src/: SUMMARY.md  documentation.md  index.md
docs/src/documentation/: publishing.md
examples/: README.md  onelogin_signed_assertion.xml  redirect_authn_request_unsigned_splunk.xml  response_signed_assertion.xml  saml_test_server.yaml  sp_metadata_splunk_self_signed.xml
examples/live_e2e/: keycloak-realm.json
examples/schemas/: SOURCES.md
implementors/alloc/string/: trait.ToString.js
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/saml_rs/xml/: trait.X509Utils.js
implementors/serde/de/: trait.Deserialize.js
saml_rs/: all.html  fn._get_private_key.html  fn.decode_authn_request_base64_encoded.html  fn.decode_authn_request_signature.html  fn.parse_authn_request.html  fn.parse_authn_tokenizer_attribute.html  fn.parse_authn_tokenizer_element_start.html  index.html  sidebar-items.js  struct.AuthnDecodeError.html  struct.AuthnRequest.html  struct.AuthnRequestParser.html  struct.SamlAuthnRequest.html  struct.SamlAuthnRequestParser.html  struct.SamlQuery.html
saml_rs/assertion/: enum.AssertionType.html  enum.BaseIDAbstractType.html  enum.StatusCode.html  fn.add_attribute.html  fn.add_issuer.html  fn.add_subject.html  fn.write_assertion_tmpdir.html  index.html  sidebar-items.js  struct.Assertion.html  struct.AssertionAttribute.html  struct.AssertionData.html  struct.SubjectData.html
saml_rs/cert/: fn.gen_self_signed_certificate.html  fn.init_cert_from_base64.html  fn.strip_cert_headers.html  index.html  sidebar-items.js  struct.CertParseError.html
saml_rs/constants/: enum.StatusCode.html  index.html  sidebar-items.js
saml_rs/metadata/: fn.generate_metadata_xml.html  fn.xml_add_certificate.html  fn.xml_write_key.html  index.html  sidebar-items.js  struct.SamlMetadata.html
saml_rs/response/: enum.BaseIDAbstractType.html  fn.add_attribute.html  fn.add_issuer.html  fn.add_status.html  fn.add_subject.html  fn.base64_encoded_response.html  fn.create_response.html  index.html  sidebar-items.js  struct.AuthNStatement.html  struct.ResponseAttribute.html  struct.ResponseElements.html  struct.SubjectData.html
saml_rs/sign/: enum.DigestAlgorithm.html  enum.SigningAlgorithm.html  fn.load_key_from_filename.html  fn.load_public_cert_from_filename.html  fn.sign_data.html  index.html  sidebar-items.js
saml_rs/sp/: enum.NameIdFormat.html  enum.SamlBinding.html  enum.SamlBindingType.html  fn.xml_indent.html  index.html  sidebar-items.js  struct.ServiceBinding.html  struct.ServiceProvider.html  struct.SpMetadata.html
saml_rs/test_samples/: constant.TEST_AUTHN_REQUEST_EXAMPLE_COM.html  constant.TEST_AUTHN_REQUEST_EXAMPLE_COM_BASE64_DEFLATED.html  constant.TEST_AUTHN_REQUEST_WITH_EMBEDDED_SIGNATURE_POST.html  constant.TEST_SAML_UNSIGNED_RESPONSE_UNSIGNED_ASSERTION.html  index.html  sidebar-items.js
saml_rs/tide_helpers/: fn.tide_metadata_response.html  index.html  sidebar-items.js  struct.SAMLRedirectQuery.html
saml_rs/utils/: fn.to_hex_string.html  index.html  sidebar-items.js  trait.DateTimeUtils.html
saml_rs/xml/: enum.SigningAlgorithm.html  fn.add_assertion_signature.html  fn.add_attribute.html  fn.add_signature.html  fn.generate_signedinfo.html  fn.write_event.html  index.html  sidebar-items.js  struct.AssertionAttribute.html  struct.AssertionData.html  struct.ResponseAttribute.html  trait.X509Utils.html
saml_rs/xmlutils/: fn.write_event.html  index.html  sidebar-items.js
saml_test_server/: Cargo.toml  all.html  fn.do_nothing.html  fn.generate_login_form.html  fn.main.html  fn.saml_metadata_get.html  fn.saml_metadata_get_sp.html  fn.saml_post_binding.html  fn.saml_redirect_get.html  fn.test_sign.html  index.html  saml_test_server.rs  sidebar-items.js  struct.AppState.html  struct.ServerConfig.html  util.rs
saml_test_server/src/: cli.rs  lib.rs  main.rs  util.rs
saml_test_server/util/: fn.do_nothing.html  fn.load_sp_metadata.html  index.html  sidebar-items.js  struct.AppState.html  struct.ServerConfig.html
samlrs/: all.html  fn.main.html  index.html
scripts/: canonicalization-test.py  fetch_saml_schemas.py  live_e2e.py  live_e2e.sh  live_e2e_verify.py
src/: assertion.rs  cert.rs  cli.rs  constants.rs  content_encryption.rs  encrypted_assertion.rs  encrypted_assertion_parser.rs  encryption_config.rs  error.rs  key_provider.rs  lib.rs  lib.rs.bak  metadata.rs  response.rs  security.rs  sign.rs  sp.rs  test_samples.rs  tide_helper.rs  tide_helpers.rs  utils.rs  validators.rs  xml.rs  xmlutils.rs
src/saml_rs/: assertion.rs.html  cert.rs.html  constants.rs.html  lib.rs.html  metadata.rs.html  response.rs.html  sign.rs.html  sp.rs.html  test_samples.rs.html  tide_helpers.rs.html  utils.rs.html  xml.rs.html  xmlutils.rs.html
src/saml_test_server/: saml_test_server.rs.html  util.rs.html
src/samlrs/: cli.rs.html
tests/: encrypted_assertions.rs  security_attack_matrix.rs  test_coverage_hardening.rs  test_digest.rs  test_digest.rs.disabled  test_key_provider.rs  test_metadata.rs  test_nothing.py  test_response.rs  test_response_parsing.rs  test_signing.rs
(+29 files in other folders)
