[workspace]
members = ["saml_test_server"]

[workspace.package]
version = "0.1.0"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
edition = "2024"
publish = false

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["rt", "macros"] }
base64 = "0.22.1"
chrono = "0.4.43"
config = "0.15.19"
driftwood = "0.0.7"
hex = "0.4.3"
http-types = "2.11.1"
inflate = "0.4.5"
log = "0.4.29"
regex = "1.12.3"
reqwest = "0.12.28"
serde = "1.0.228"
serde-xml-rs = "0.8.2"
serde_derive = "1.0"
serde_json = "1.0"
sha-1 = "0.10.0"
shellexpand = "3.1.1"
tera = "1"
tide = "0.16"
tide-openssl = "0.1.1"
uuid = "1.21.0"
xml-rs = "1.0.0"
xmlparser = "0.13.6"
xml_c14n = "0.3.0"

[package]
name = "saml-rs"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[features]
default = []
danger_i_want_to_risk_it_all = []

[dependencies]
aes = "0.8"
aes-gcm = "0.10"
base64 = { workspace = true }
cbc = "0.1"
certkit = "0.1.0"
chrono = { workspace = true }
elliptic-curve = { version = "0.13.8", features = ["serde", "ecdh", "sec1"] }
hmac = "0.12"
inflate = { workspace = true }
k256 = { version = "0.13.4", features = ["ecdh", "ecdsa", "pkcs8", "serde"] }
log = { workspace = true }
p192 = "0.13.0"
quick-xml = "0.39.1"
rand = "0.10"
rsa = "0.9"
serde = { workspace = true }
serde_derive = { workspace = true }
sha1 = { package = "sha-1", version = "0.10" }
sha2 = "0.10"
signature = { version = "2.2.0", features = ["digest"] }
subtle = "2.6.1"
thiserror = "2.0.18"
tide = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt"] }
typenum = "1.17"
uuid = { workspace = true, features = ["serde", "v4"] }
x509-cert = "0.2.5"
xml_c14n = { workspace = true }
xml-rs = { workspace = true }
xmlparser = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true, features = ["blocking", "native-tls"] }
regex = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "macros"] }
tempfile = "3.25.0"
dissimilar = "1.0.10"
