[tool.poetry]
name = "saml-rs"
version = "0.0.1"
description = "Testing scripts for saml-rs"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
lxml = "^4.9.1"
signxml = "^2.10.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pylint = "^2.15.4"
mypy = "^0.982"
pytest = "^7.1.3"
lxml-stubs = "^0.4.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
extension-pkg-allow-list="lxml"
max-line-length=200