[project]
name = "saml-rs"
version = "0.0.1"
description = "Testing scripts for saml-rs"
authors = [
    { name = "James Hodgkinson", email = "james@terminaloutcomes.com" },
]
license = { text = "MIT" }
requires-python = ">=3.13,<4.0"
dependencies = [
    "click>=8.3.1",
    "docker>=7.1.0,<8.0.0",
    "lxml>=5.3.0,<6.0.0",
    "signxml>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = [
    "black>=22.10.0,<23.0.0",
    "pylint>=2.15.5,<3.0.0",
    "mypy>=0.991,<1.0.0",
    "pytest>=7.2.0,<10.0.0",
    "lxml-stubs>=0.4.0,<1.0.0",
    "coverage>=6.5.0,<7.0.0",
    "lxml>=5.4.0",
    "ty>=0.0.17",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pylint.MASTER]
extension-pkg-allow-list = "lxml"
max-line-length = 200
