[project]
name = "saml-rs"
version = "0.0.1"
description = "Testing scripts for saml-rs"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
requires-python = ">=3.13,<4.0"
dependencies = [
    "click>=8.3.1",
    "docker>=7.1.0,<8.0.0",
    "lxml>=6.0.2",
    "signxml>=4.0.0,<5.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "lxml-stubs>=0.4.0,<1.0.0",
    "coverage>=7.13.4",
    "ty>=0.0.17",
    "pylint>=4.0.4",
    "ruff>=0.15.1",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pylint.MASTER]
extension-pkg-allow-list = "lxml"
max-line-length = 200
