[package]
name = "saml_test_server"
version = "0.1.0"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
edition = "2018"
default-run = "saml_test_server"

[[bin]]
name = "saml_test_server"
path = "saml_test_server.rs"



[dependencies]

saml-rs = { path = "../" }

log = "0.4"
base64 = "0.13"


# for inflating AuthN requests
inflate = "0.4.5"


#writing xml
xml-rs = "0.8"


# parsing and shenanigans
xmlparser = "0.13.3"
serde = "1.0"
serde-xml-rs = "0.6.0"
serde_derive = "1.0"
serde_json = "1.0"

# certificate things

openssl = "0.10.35"
reqwest = "0.11"

# testing strings

difference = "2.0.0"

chrono = "0.4.19"

http-types = "2.11.1"

tide = { version="0.16"}
tide-openssl = "0.1.1"
async-std = { version = "1.6.0", features = ["attributes"] }

config = "0.13"

shellexpand = "2.0"

driftwood = "0.0.6"


# html generation
tera = "1"

# for test_digest
sha-1 = "0.10.0"
hex = "0.4.3"
