[package]
name = "saml_test_server"
default-run = "saml_test_server"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "saml_test_server"
path = "saml_test_server.rs"

[features]
default = []
danger_i_want_to_risk_it_all = ["saml-rs/danger_i_want_to_risk_it_all"]


[dependencies]
saml-rs = { path = "../" }
log = { workspace = true }
base64 = { workspace = true }
inflate = { workspace = true }
xml-rs = { workspace = true }
xmlparser = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
openssl = { workspace = true }
reqwest = { workspace = true }
difference = { workspace = true }
chrono = { workspace = true }
http-types = { workspace = true }
tide = { workspace = true }
tide-openssl = { workspace = true }
config = { workspace = true }
shellexpand = { workspace = true }
driftwood = { workspace = true }
tera = { workspace = true }
sha-1 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
