[package]
name = "saml_test_server"

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "./src/lib.rs"


[features]
default = []
danger_i_want_to_risk_it_all = ["saml-rs/danger_i_want_to_risk_it_all"]


[dependencies]
saml-rs = { path = "../" }
log = { workspace = true }
base64 = { workspace = true }
inflate = { workspace = true }
xml-rs = { workspace = true }
xmlparser = { workspace = true }
serde = { workspace = true }
serde-xml-rs = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
http-types = { workspace = true }
tide = { workspace = true }
tide-openssl = { workspace = true }
config = { workspace = true }
shellexpand = { workspace = true }
driftwood = { workspace = true }
tera = { workspace = true }
sha-1 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
x509-cert = "0.2.5"
signature = { version = "2.2.0", features = ["derive", "digest"] }
rsa = { version = "0.9.10", features = ["sha1", "sha2", "serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
